--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               >
             </li>
             <li>
-              <a href="#null" class="nav__link">Eventos</a>
+              <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
               <a href="#null" class="nav__link">Conviértete en miembro</a>
@@ -63,7 +63,7 @@
       </header>
 
       <main class="content">
-        <section id="saff" class="staff">
+        <section id="staff" class="staff">
           <h2 class="staff__title">Los preferidos de nuestros lectores</h2>
           <p class="staff__subtitle">Que nuestros lectores y lectoras aman</p>
           <ul class="staff__cards">
@@ -169,7 +169,53 @@
             </p>
             <a href="#" class="events__more">Más eventos &rarr;</a>
           </div>
-          <!-- Comienza a crear la composición aquí -->
+          <div id="events" class="events__cover">
+            <img
+              src="./images/cafe.png"
+              alt="imagen cafeteria"
+              class="events__image"
+            />
+            <div class="person person_name_feynman">
+              <p class="person__caption">Joan Feynman</p>
+              <img
+                src="./images/person_feynman.png"
+                alt="foto feynman"
+                class="person__image person__image_size_l"
+              />
+            </div>
+            <div class="person person_name_tarter">
+              <p class="person__caption">Jill Tarter</p>
+              <img
+                src="./images/person_tarter.png"
+                alt="foto tarter"
+                class="person__image person__image_size_m"
+              />
+            </div>
+            <div class="person person_name_burbidge">
+              <p class="person__caption">Margaret Burbidge</p>
+              <img
+                src="./images/person_burbidge.png"
+                alt="foto burbidge"
+                class="person__image person__image_size_m"
+              />
+            </div>
+            <div class="person person_name_mitchell">
+              <img
+                src="./images/person_mitchell.png"
+                alt="foto mitchell"
+                class="person__image person__image_size_s"
+              />
+              <p class="person__caption">Maria Mitchell</p>
+            </div>
+            <div class="person person_name_cannon">
+              <img
+                src="./images/person_cannon.png"
+                alt="foto cannon"
+                class="person__image person__image_size_m"
+              />
+              <p class="person__caption">Annie Jump Cannon</p>
+            </div>
+          </div>
         </section>
       </main>
     </div>
