--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </li>
           </ul>
         </section>
-        <section class="events">
+        <section id="events" class="events">
           <div class="events__content">
             <h2 class="events__heading">Próximos eventos:</h2>
             <h3 class="events__title">
@@ -169,7 +169,7 @@
             </p>
             <a href="#" class="events__more">Más eventos &rarr;</a>
           </div>
-          <div id="events" class="events__cover">
+          <div class="events__cover">
             <img
               src="./images/cafe.png"
               alt="imagen cafeteria"
