--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
               <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
-              <a href="#null" class="nav__link">Conviértete en miembro</a>
+              <a href="#member" class="nav__link">Conviértete en miembro</a>
             </li>
             <li>
-              <a href="#null" class="nav__link">Contactos</a>
+              <a href="#footer" class="nav__link">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -217,7 +217,109 @@
             </div>
           </div>
         </section>
+        <section id="member" class="membership">
+          <h2 class="membership__title">
+            ¡Convertirse en miembro es muy fácil!
+          </h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Paso 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Completa el formulario de afiliación en línea o en persona.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Ven y recoge tu credencial de la biblioteca en la recepción.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Firma el envés de la tarjeta.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                ¡Disfruta de los increíbles beneficios de nuestra membresía!
+              </p>
+            </li>
+          </ul>
+        </section>
       </main>
+
+      <footer id="footer" class="footer">
+        <section class="footer__columns">
+          <div class="footer__column">
+            <img
+              src="./images/logo_white.svg"
+              alt="Logotipo de la Biblioteca Triple Peaks"
+              class="footer__logo"
+            />
+          </div>
+          <div class="footer__column_content_hours">
+            <h4 class="footer__column-heading">Horario de apertura</h4>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <p>Lunes a viernes: 9 a.m. - 8 p.m.</p>
+              </li>
+              <li class="footer__list-item">
+                <p>Sábados y domingos: 10 a.m. - 6 p.m.</p>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column_content_social">
+            <h4 class="footer__column-heading">Redes sociales</h4>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="Logotipo de facebook"
+                  class="footer__social-icon"
+                />
+                <a href="#null" class="footer__column-link">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="Logotipo de facebook"
+                  class="footer__social-icon"
+                />
+                <a href="#null" class="footer__column-link">Instagram</a>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <h4 class="footer__copyright">© 2024 Luis Gonzalez</h4>
+      </footer>
     </div>
   </body>
 </html>
