--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               class="footer__logo"
             />
           </div>
-          <div class="footer__columns footer__column_content_hours">
+          <div class="footer__column footer__column_content_hours">
             <h4 class="footer__column-heading">Horario de apertura</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
@@ -296,7 +296,7 @@
               </li>
             </ul>
           </div>
-          <div class="footer__columns footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Redes sociales</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
