--- a/index.html
+++ b/index.html
@@ -300,20 +300,22 @@
             <h4 class="footer__column-heading">Redes sociales</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <img
-                  src="./images/facebook_white.svg"
-                  alt="Logotipo de facebook"
-                  class="footer__social-icon"
-                />
-                <a href="#null" class="footer__column-link">Facebook</a>
+                <a href="#null" class="footer__column-link"
+                  ><img
+                    src="./images/facebook_white.svg"
+                    alt="Logotipo de facebook"
+                    class="footer__social-icon"
+                  />Facebook</a
+                >
               </li>
               <li class="footer__list-item">
-                <img
-                  src="./images/instagram_white.svg"
-                  alt="Logotipo de facebook"
-                  class="footer__social-icon"
-                />
-                <a href="#null" class="footer__column-link">Instagram</a>
+                <a href="#null" class="footer__column-link"
+                  ><img
+                    src="./images/instagram_white.svg"
+                    alt="Logotipo de facebook"
+                    class="footer__social-icon"
+                  />Instagram</a
+                >
               </li>
             </ul>
           </div>
