proyect 3-3 copy correct

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             </ul>
           </div>
         </section>
-        <h4 class="footer__copyright">© 2024 Luis Gonzalez</h4>
+        <p class="footer__copyright">© 2024 Luis Gonzalez</p>
       </footer>
     </div>
   </body>
