--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
               <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
-              <a href="#member" class="nav__link">Conviértete en miembro</a>
+              <a href="#Hazte-miembro" class="nav__link"
+                >Conviértete en miembro</a
+              >
             </li>
             <li>
-              <a href="#footer" class="nav__link">Contactos</a>
+              <a href="#pie-de-página" class="nav__link">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -217,7 +219,7 @@
             </div>
           </div>
         </section>
-        <section id="member" class="membership">
+        <section id="Hazte-miembro" class="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
@@ -276,7 +278,7 @@
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="pie-de-página">
         <section id="footer" class="footer__columns">
           <div class="footer__column">
             <img
