--- a/index.html
+++ b/index.html
@@ -278,8 +278,12 @@
         </section>
       </main>
 
-      <footer class="pie-de-página">
-        <section id="footer" class="footer__columns">
+      <footer class="footer">
+        <section
+          id="pie-de-página
+        "
+          class="footer__columns"
+        >
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
