--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
               <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
-              <a href="#Hazte-miembro" class="nav__link"
-                >Conviértete en miembro</a
-              >
+              <a href="#member" class="nav__link">Conviértete en miembro</a>
             </li>
             <li>
-              <a href="#pie-de-página" class="nav__link">Contactos</a>
+              <a href="#footer" class="nav__link">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -219,7 +217,7 @@
             </div>
           </div>
         </section>
-        <section id="Hazte-miembro" class="membership">
+        <section id="member" class="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
@@ -279,11 +277,7 @@
       </main>
 
       <footer class="footer">
-        <section
-          id="pie-de-página
-        "
-          class="footer__columns"
-        >
+        <section id="footer" class="footer__columns">
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
