proyect 3-3 new id

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
               <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
-              <a href="#member" class="nav__link">Conviértete en miembro</a>
+              <a href="#become-member" class="nav__link"
+                >Conviértete en miembro</a
+              >
             </li>
             <li>
               <a href="#footer" class="nav__link">Contactos</a>
@@ -217,7 +219,7 @@
             </div>
           </div>
         </section>
-        <section id="member" class="membership">
+        <section id="become-member" class="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
