--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
         </section>
       </main>
 
-      <footer id="footer" class="footer">
-        <section class="footer__columns">
+      <footer class="footer">
+        <section id="footer" class="footer__columns">
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
