proyect 3-3 new id member

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             </div>
           </div>
         </section>
-        <section id="become-member" class="membership">
+        <section id="membership" class="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
@@ -278,8 +278,8 @@
         </section>
       </main>
 
-      <footer id="footer" class="footer">
-        <section class="footer__columns">
+      <footer class="footer">
+        <section id="footer" class="footer__columns">
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
