proyect 3-3 new id membership

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
               <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
-              <a href="#become-member" class="nav__link"
-                >Conviértete en miembro</a
-              >
+              <a href="#membership" class="nav__link">Conviértete en miembro</a>
             </li>
             <li>
               <a href="#footer" class="nav__link">Contactos</a>
@@ -278,8 +276,8 @@
         </section>
       </main>
 
-      <footer id="footer" class="footer">
-        <section class="footer__columns">
+      <footer class="footer">
+        <section id="footer" class="footer__columns">
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
